--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -168,8 +168,7 @@ img.site-icon-page {
 	display: block;
 }
 
-#article,
-#comments {
+#article {
 	font-family: "PT Serif", Georgia, "Times New Roman", serif;
 	font-weight: 400;
 	letter-spacing: 0px;
