--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -40,12 +40,15 @@ img.site-icon {
 	transition-duration: .25s;
 }
 
-#article,
-#comments {
+#article{
 	width: 90%;
 	padding: 50px 5%;
 	left: 0px;
 	margin-left: 0px;
+}
+
+#comments {
+	width: 90%;
 }
 
 #bg-video {
