--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -18,12 +18,15 @@
 	margin-left: -350px;
 }
 
-#article,
-#comments {
+#article {
 	width: 700px;
 	padding: 50px 0px;
 	left: 50%;
 	margin-left: -350px;
+}
+
+#comments {
+	width: 700px;
 }
 
 #bg-video {
