--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,10 +22,8 @@ layout: default
 
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
-		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-		var disqus_shortname = 'kunmingbeer'; // required: replace example with your forum shortname
+		var disqus_shortname = 'kunmingbeer';
 
-		/* * * DON'T EDIT BELOW THIS LINE * * */
 		(function() {
 			var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
 			dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -39,5 +37,9 @@ layout: default
 </div>
 {% endif %}
 <footer class="clean" style="background-image: url({{ site.cover }}); background-position: bottom; height: 60px;">
+	{% if page.lang == 'zh' %}
+	<p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright-zh.url }}" target="_blank">{{ site.copyright-zh.author }}</a>. <a href="{{ site.copyright-zh.type_url }}" target="_blank">{{ site.copyright-zh.type_title }}</a>.</p>
+	{% else %}
 	<p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
+	{% endif %}
 </footer>
