--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,10 +33,8 @@ comments: true
 
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
-		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-		var disqus_shortname = 'kunmingbeer'; // required: replace example with your forum shortname
+		var disqus_shortname = 'kunmingbeer';
 
-		/* * * DON'T EDIT BELOW THIS LINE * * */
 		(function() {
 			var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
 			dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -63,7 +61,13 @@ comments: true
 			{% endif %}
 		</a>
 	</div>
+
+	{% if page.lang == 'zh' %}
+	<p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright-zh.url }}" target="_blank">{{ site.copyright-zh.author }}</a>. <a href="{{ site.copyright-zh.type_url }}" target="_blank">{{ site.copyright-zh.type_title }}</a>.</p>
+	{% else %}
 	<p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
+	{% endif %}
+
 </footer>
 {% endfor %}
 <script src="/assets/js/smooth-scroll.js"></script>
