language changer and adding post

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -38,8 +38,16 @@ layout: default
 {% endif %}
 <footer class="clean" style="background-image: url({{ site.cover }}); background-position: bottom; height: 60px;">
 	{% if page.lang == 'zh' %}
+		{% assign posts=site.posts|where:"date",page.date|where:"lang", 'en'|sort: 'path'| reverse %}
+		{% for post in posts %} 
+		<a href="{{ post.url }}" title="English version" class="language-switcher"><i class="flag-gb"></i> English</a>
+		{% endfor %}
 	<p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright-zh.url }}" target="_blank">{{ site.copyright-zh.author }}</a>. <a href="{{ site.copyright-zh.type_url }}" target="_blank">{{ site.copyright-zh.type_title }}</a>.</p>
 	{% else %}
+		{% assign posts=site.posts|where:"date",page.date|where:"lang", 'zh'|sort: 'path'| reverse %}
+		{% for post in posts %} 
+		<a href="{{ post.url }}" title="看中文版" class="language-switcher"><i class="flag-cn"></i> 中文版</a>
+		{% endfor %}
 	<p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 	{% endif %}
 </footer>
