--- a/_includes/list.html
+++ b/_includes/list.html
@@ -3,7 +3,7 @@
 		<div>
 			<span class="post-date">{{ post.date | date_to_long_string }}</span>
 			<h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-			<p class="post-description">{{ post.content | strip_html | truncatewords: 50 }}</p>
+			<p class="post-description">{{ post.content | markdownify | strip_html | truncatewords: 50 }}</p>
 		</div>
 		<br>
 	{% endfor %}
